--- a/public/platform/native/BUILD.gn
+++ b/public/platform/native/BUILD.gn
@@ -44,7 +44,7 @@ source_set("gles2_thunks") {
     "MOJO_GLES2_IMPLEMENTATION",
   ]
 
-  configs += [ "//third_party/khronos:khronos_headers" ]
+  configs += [ "//third_party/mojo/third_party/khronos:khronos_headers" ]
 
   deps = [
     "//mojo/public/c/gles2",
