Hardcode //mojo paths

--- a/public/c/environment/BUILD.gn
+++ b/public/c/environment/BUILD.gn
@@ -8,5 +8,5 @@ source_set("environment") {
     "logger.h",
   ]
 
-  deps = [ "//mojo/public/c/system" ]
+  deps = [ "//third_party/mojo/public/c/system" ]
 }
