--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -6,10 +6,10 @@
 test("mojo_public_application_unittests") {
   deps = [
     "//base",
-    "//mojo/edk/test:run_all_unittests",
-    "//mojo/public/cpp/application:standalone",
-    "//mojo/public/cpp/environment:standalone",
-    "//mojo/public/cpp/utility",
+    "//third_party/mojo/edk/test:run_all_unittests",
+    "//third_party/mojo/public/cpp/application:standalone",
+    "//third_party/mojo/public/cpp/environment:standalone",
+    "//third_party/mojo/public/cpp/utility",
     "//testing/gtest",
   ]
 
