--- a/public/BUILD.gn
+++ b/public/BUILD.gn
@@ -8,37 +8,37 @@ group("public") {
   deps = [
     ":libmojo_sdk",
     ":sdk",
-    "//mojo/public/cpp/application:standalone",
-    "//mojo/public/cpp/bindings",
-    "//mojo/public/cpp/environment:standalone",
-    "//mojo/public/cpp/utility",
-    "//mojo/public/interfaces/bindings/tests:test_interfaces",
-    "//mojo/public/sky",
+    "//third_party/mojo/public/cpp/application:standalone",
+    "//third_party/mojo/public/cpp/bindings",
+    "//third_party/mojo/public/cpp/environment:standalone",
+    "//third_party/mojo/public/cpp/utility",
+    "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
+    "//third_party/mojo/public/sky",
   ]
 
   if (is_linux) {
     deps += [
-      "//mojo/public/python",
+      "//third_party/mojo/public/python",
     ]
   }
 
   if (is_android) {
     deps += [
-      "//mojo/public/java:system",
-      "//mojo/public/java:bindings",
+      "//third_party/mojo/public/java:system",
+      "//third_party/mojo/public/java:bindings",
     ]
   }
 }
 
 group("sdk") {
   deps = [
-    "//mojo/public/c/system",
-    "//mojo/public/cpp/application:standalone",
-    "//mojo/public/cpp/bindings",
-    "//mojo/public/cpp/environment:standalone",
-    "//mojo/public/cpp/utility",
-    "//mojo/public/interfaces/application",
-    "//mojo/public/js/bindings",
+    "//third_party/mojo/public/c/system",
+    "//third_party/mojo/public/cpp/application:standalone",
+    "//third_party/mojo/public/cpp/bindings",
+    "//third_party/mojo/public/cpp/environment:standalone",
+    "//third_party/mojo/public/cpp/utility",
+    "//third_party/mojo/public/interfaces/application",
+    "//third_party/mojo/public/js/bindings",
   ]
 }
 
