--- a/public/cpp/bindings/tests/BUILD.gn
+++ b/public/cpp/bindings/tests/BUILD.gn
@@ -25,13 +25,13 @@ test("mojo_public_bindings_unittests") {
   ]
 
   deps = [
-    "//mojo/edk/test:run_all_unittests",
-    "//mojo/public/cpp/bindings",
-    "//mojo/public/cpp/environment:standalone",
-    "//mojo/public/cpp/system",
-    "//mojo/public/cpp/test_support:test_utils",
-    "//mojo/public/cpp/utility",
-    "//mojo/public/interfaces/bindings/tests:test_interfaces",
+    "//third_party/mojo/edk/test:run_all_unittests",
+    "//third_party/mojo/public/cpp/bindings",
+    "//third_party/mojo/public/cpp/environment:standalone",
+    "//third_party/mojo/public/cpp/system",
+    "//third_party/mojo/public/cpp/test_support:test_utils",
+    "//third_party/mojo/public/cpp/utility",
+    "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
     "//testing/gtest",
     ":mojo_public_bindings_test_utils",
   ]
@@ -44,6 +44,6 @@ source_set("mojo_public_bindings_test_utils") {
   ]
 
   deps = [
-    "//mojo/public/c/system",
+    "//third_party/mojo/public/c/system",
   ]
 }
