--- a/public/cpp/environment/tests/BUILD.gn
+++ b/public/cpp/environment/tests/BUILD.gn
@@ -11,12 +11,12 @@ test("mojo_public_environment_unittests") {
   ]
 
   deps = [
-    "//mojo/edk/test:run_all_unittests",
-    "//mojo/public/c/environment",
-    "//mojo/public/cpp/environment:standalone",
-    "//mojo/public/cpp/system",
-    "//mojo/public/cpp/test_support:test_utils",
-    "//mojo/public/cpp/utility",
+    "//third_party/mojo/edk/test:run_all_unittests",
+    "//third_party/mojo/public/c/environment",
+    "//third_party/mojo/public/cpp/environment:standalone",
+    "//third_party/mojo/public/cpp/system",
+    "//third_party/mojo/public/cpp/test_support:test_utils",
+    "//third_party/mojo/public/cpp/utility",
     "//testing/gtest",
   ]
 }
