--- a/public/cpp/utility/tests/BUILD.gn
+++ b/public/cpp/utility/tests/BUILD.gn
@@ -5,10 +5,10 @@
 # GYP version: mojo/mojo_base.gyp:mojo_public_utility_unittests
 test("mojo_public_utility_unittests") {
   deps = [
-    "//mojo/edk/test:run_all_unittests",
-    "//mojo/public/cpp/system",
-    "//mojo/public/cpp/test_support:test_utils",
-    "//mojo/public/cpp/utility",
+    "//third_party/mojo/edk/test:run_all_unittests",
+    "//third_party/mojo/public/cpp/system",
+    "//third_party/mojo/public/cpp/test_support:test_utils",
+    "//third_party/mojo/public/cpp/utility",
     "//testing/gtest",
   ]
 
