--- a/public/tools/bindings/mojom.gni
+++ b/public/tools/bindings/mojom.gni
@@ -24,7 +24,7 @@ template("mojom") {
   assert(defined(invoker.sources),
          "\"sources\" must be defined for the $target_name template.")
 
-  generator_root = "//mojo/public/tools/bindings"
+  generator_root = "//third_party/mojo/public/tools/bindings"
   generator_script = "$generator_root/mojom_bindings_generator.py"
   generator_sources = [
     generator_script,
@@ -137,7 +137,7 @@ template("mojom") {
     data = process_file_template(invoker.sources, generator_js_outputs)
     deps = [
       ":$generator_target_name",
-      "//mojo/public/cpp/bindings",
+      "//third_party/mojo/public/cpp/bindings",
     ]
     if (defined(invoker.deps)) {
       deps += invoker.deps
@@ -175,13 +175,13 @@ template("mojom") {
     java_target_name = target_name + "_java"
     android_library(java_target_name) {
       deps = [
-        "//mojo/public/java:bindings",
-        "//mojo/public/java:system",
+        "//third_party/mojo/public/java:bindings",
+        "//third_party/mojo/public/java:system",
       ]
 
       foreach(d, all_deps) {
-        # Resolve the name, so that a target //mojo/something becomes
-        # //mojo/something:something and we can append "_java" to get the java
+        # Resolve the name, so that a target //third_party/mojo/something becomes
+        # //third_party/mojo/something:something and we can append "_java" to get the java
         # dependency name.
         full_name = get_label_info(d, "label_no_toolchain")
         deps += [ "${full_name}_java" ]
