Change gn files to refer to //third_party/mojo/testing

--- a/public/c/system/tests/BUILD.gn
+++ b/public/c/system/tests/BUILD.gn
@@ -9,7 +9,7 @@ source_set("tests") {
   deps = [
     "//third_party/mojo/public/c/environment",
     "//third_party/mojo/public/c/system",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
   ]
 
   sources = [
@@ -34,6 +34,6 @@ test("perftests") {
     "//third_party/mojo/public/cpp/system",
     "//third_party/mojo/public/cpp/test_support:test_utils",
     "//third_party/mojo/public/cpp/utility",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
   ]
 }
