--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -10,7 +10,7 @@ test("mojo_public_application_unittests") {
     "//third_party/mojo/public/cpp/application:standalone",
     "//third_party/mojo/public/cpp/environment:standalone",
     "//third_party/mojo/public/cpp/utility",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
   ]
 
   sources = [ "service_registry_unittest.cc" ]
