--- a/public/cpp/bindings/tests/BUILD.gn
+++ b/public/cpp/bindings/tests/BUILD.gn
@@ -32,7 +32,7 @@ test("mojo_public_bindings_unittests") {
     "//third_party/mojo/public/cpp/test_support:test_utils",
     "//third_party/mojo/public/cpp/utility",
     "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
     ":mojo_public_bindings_test_utils",
   ]
 }
