--- a/public/cpp/system/tests/BUILD.gn
+++ b/public/cpp/system/tests/BUILD.gn
@@ -9,7 +9,7 @@ test("mojo_public_system_unittests") {
     "//third_party/mojo/public/c/system/tests",
     "//third_party/mojo/public/cpp/system",
     "//third_party/mojo/public/cpp/test_support:test_utils",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
   ]
 
   sources = [
