--- a/public/cpp/utility/tests/BUILD.gn
+++ b/public/cpp/utility/tests/BUILD.gn
@@ -9,7 +9,7 @@ test("mojo_public_utility_unittests") {
     "//third_party/mojo/public/cpp/system",
     "//third_party/mojo/public/cpp/test_support:test_utils",
     "//third_party/mojo/public/cpp/utility",
-    "//testing/gtest",
+    "//third_party/mojo/testing/gtest",
   ]
 
   sources = [
