--- a/public/BUILD.gn
+++ b/public/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 group("public") {
   # Meta-target, don't link into production code.
@@ -8,37 +9,37 @@ group("public") {
   deps = [
     ":libmojo_sdk",
     ":sdk",
-    "//third_party/mojo/public/cpp/application:standalone",
-    "//third_party/mojo/public/cpp/bindings",
-    "//third_party/mojo/public/cpp/environment:standalone",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
-    "//third_party/mojo/public/sky",
+    mojo_root + "mojo/public/cpp/application:standalone",
+    mojo_root + "mojo/public/cpp/bindings",
+    mojo_root + "mojo/public/cpp/environment:standalone",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/public/interfaces/bindings/tests:test_interfaces",
+    mojo_root + "mojo/public/sky",
   ]
 
   if (is_linux) {
     deps += [
-      "//third_party/mojo/public/python",
+      mojo_root + "mojo/public/python",
     ]
   }
 
   if (is_android) {
     deps += [
-      "//third_party/mojo/public/java:system",
-      "//third_party/mojo/public/java:bindings",
+      mojo_root + "mojo/public/java:system",
+      mojo_root + "mojo/public/java:bindings",
     ]
   }
 }
 
 group("sdk") {
   deps = [
-    "//third_party/mojo/public/c/system",
-    "//third_party/mojo/public/cpp/application:standalone",
-    "//third_party/mojo/public/cpp/bindings",
-    "//third_party/mojo/public/cpp/environment:standalone",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/public/interfaces/application",
-    "//third_party/mojo/public/js/bindings",
+    mojo_root + "mojo/public/c/system",
+    mojo_root + "mojo/public/cpp/application:standalone",
+    mojo_root + "mojo/public/cpp/bindings",
+    mojo_root + "mojo/public/cpp/environment:standalone",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/public/interfaces/application",
+    mojo_root + "mojo/public/js/bindings",
   ]
 }
 
