--- a/public/c/environment/BUILD.gn
+++ b/public/c/environment/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 source_set("environment") {
   sources = [
@@ -8,5 +9,5 @@ source_set("environment") {
     "logger.h",
   ]
 
-  deps = [ "//third_party/mojo/public/c/system" ]
+  deps = [ mojo_root + "mojo/public/c/system" ]
 }
