--- a/public/c/gles2/BUILD.gn
+++ b/public/c/gles2/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 config("gles2_config") {
   defines = [ "GLES2_USE_MOJO" ]
@@ -15,7 +16,7 @@ source_set("gles2") {
   public_configs = [ ":gles2_config" ]
 
   public_deps = [
-    "//third_party/mojo/public/c/environment",
-    "//third_party/mojo/public/c/system",
+    mojo_root + "mojo/public/c/environment",
+    mojo_root + "mojo/public/c/system",
   ]
 }
