--- a/public/c/system/BUILD.gn
+++ b/public/c/system/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 # Depend on this target to use the types etc defined in the system without
 # linking against a specific implementation of the system. To link against a
@@ -34,15 +35,15 @@ source_set("system") {
 group("for_shared_library") {
   public_deps = [ ":system" ]
   if (is_component_build) {
-    deps = [ "//third_party/mojo/edk/system" ]
+    deps = [ mojo_root + "mojo/edk/system" ]
   } else {
-    deps = [ "//third_party/mojo/public/platform/native:system_thunks" ]
+    deps = [ mojo_root + "mojo/public/platform/native:system_thunks" ]
   }
 }
 
 group("for_component") {
   public_deps = [ ":system" ]
   if (is_component_build) {
-    deps = [ "//third_party/mojo/edk/system" ]
+    deps = [ mojo_root + "mojo/edk/system" ]
   }
 }
