--- a/public/c/system/tests/BUILD.gn
+++ b/public/c/system/tests/BUILD.gn
@@ -1,15 +1,16 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 source_set("tests") {
   testonly = true
-  visibility = [ "//third_party/mojo/public/cpp/system/tests:mojo_public_system_unittests" ]
+  visibility = [ mojo_root + "mojo/public/cpp/system/tests:mojo_public_system_unittests" ]
 
   deps = [
-    "//third_party/mojo/public/c/environment",
-    "//third_party/mojo/public/c/system",
-    "//third_party/mojo/testing/gtest",
+    mojo_root + "mojo/public/c/environment",
+    mojo_root + "mojo/public/c/system",
+    mojo_root + "mojo/testing/gtest",
   ]
 
   sources = [
@@ -29,11 +30,11 @@ test("perftests") {
 
   deps = [
     "//base",
-    "//third_party/mojo/edk/test:run_all_perftests",
-    "//third_party/mojo/public/c/environment",
-    "//third_party/mojo/public/cpp/system",
-    "//third_party/mojo/public/cpp/test_support:test_utils",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/testing/gtest",
+    mojo_root + "mojo/edk/test:run_all_perftests",
+    mojo_root + "mojo/public/c/environment",
+    mojo_root + "mojo/public/cpp/system",
+    mojo_root + "mojo/public/cpp/test_support:test_utils",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/testing/gtest",
   ]
 }
