--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -1,16 +1,17 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 # GYP version: mojo/mojo_base.gyp:mojo_public_application_unittests
 test("mojo_public_application_unittests") {
   deps = [
     "//base",
-    "//third_party/mojo/edk/test:run_all_unittests",
-    "//third_party/mojo/public/cpp/application:standalone",
-    "//third_party/mojo/public/cpp/environment:standalone",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/testing/gtest",
+    mojo_root + "mojo/edk/test:run_all_unittests",
+    mojo_root + "mojo/public/cpp/application:standalone",
+    mojo_root + "mojo/public/cpp/environment:standalone",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/testing/gtest",
   ]
 
   sources = [ "service_registry_unittest.cc" ]
