--- a/public/cpp/bindings/tests/BUILD.gn
+++ b/public/cpp/bindings/tests/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 # GYP version: mojo/mojo_base.gyp:mojo_public_bindings_unittests
 test("mojo_public_bindings_unittests") {
@@ -25,14 +26,14 @@ test("mojo_public_bindings_unittests") {
   ]
 
   deps = [
-    "//third_party/mojo/edk/test:run_all_unittests",
-    "//third_party/mojo/public/cpp/bindings",
-    "//third_party/mojo/public/cpp/environment:standalone",
-    "//third_party/mojo/public/cpp/system",
-    "//third_party/mojo/public/cpp/test_support:test_utils",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/public/interfaces/bindings/tests:test_interfaces",
-    "//third_party/mojo/testing/gtest",
+    mojo_root + "mojo/edk/test:run_all_unittests",
+    mojo_root + "mojo/public/cpp/bindings",
+    mojo_root + "mojo/public/cpp/environment:standalone",
+    mojo_root + "mojo/public/cpp/system",
+    mojo_root + "mojo/public/cpp/test_support:test_utils",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/public/interfaces/bindings/tests:test_interfaces",
+    mojo_root + "mojo/testing/gtest",
     ":mojo_public_bindings_test_utils",
   ]
 }
@@ -44,6 +45,6 @@ source_set("mojo_public_bindings_test_utils") {
   ]
 
   deps = [
-    "//third_party/mojo/public/c/system",
+    mojo_root + "mojo/public/c/system",
   ]
 }
