--- a/public/cpp/system/BUILD.gn
+++ b/public/cpp/system/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 source_set("system") {
   sources = [
@@ -13,5 +14,5 @@ source_set("system") {
     "message_pipe.h"
   ]
 
-  public_deps = [ "//third_party/mojo/public/c/system" ]
+  public_deps = [ mojo_root + "mojo/public/c/system" ]
 }
