--- a/public/cpp/test_support/BUILD.gn
+++ b/public/cpp/test_support/BUILD.gn
@@ -1,15 +1,16 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 # GYP version: mojo/public/mojo_public.gyp:mojo_public_test_utils
 source_set("test_utils") {
   testonly = true
   deps = [
     "//base",
-    "//third_party/mojo/public/c/test_support",
-    "//third_party/mojo/public/cpp/system",
-    "//third_party/mojo/testing/gtest",
+    mojo_root + "mojo/public/c/test_support",
+    mojo_root + "mojo/public/cpp/system",
+    mojo_root + "mojo/testing/gtest",
   ]
 
   sources = [
