--- a/public/cpp/utility/BUILD.gn
+++ b/public/cpp/utility/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 source_set("utility") {
   sources = [
@@ -17,8 +18,8 @@ source_set("utility") {
   ]
 
   deps = [
-    "//third_party/mojo/public/cpp/bindings:callback",
-    "//third_party/mojo/public/cpp/system",
+    mojo_root + "mojo/public/cpp/bindings:callback",
+    mojo_root + "mojo/public/cpp/system",
   ]
 
   if (is_win) {
