--- a/public/platform/native/BUILD.gn
+++ b/public/platform/native/BUILD.gn
@@ -1,11 +1,12 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
 source_set("system_thunks") {
   visibility = [
-    "//third_party/mojo/public/c/system:for_component",
-    "//third_party/mojo/public/c/system:for_shared_library",
+    mojo_root + "mojo/public/c/system:for_component",
+    mojo_root + "mojo/public/c/system:for_shared_library",
   ]
 
   sources = [
@@ -13,7 +14,7 @@ source_set("system_thunks") {
     "system_thunks.cc",
   ]
   defines = [ "MOJO_SYSTEM_IMPLEMENTATION" ]
-  deps = [ "//third_party/mojo/public/c/system" ]
+  deps = [ mojo_root + "mojo/public/c/system" ]
 
   # The GYP target analogous to this one builds this code into a
   # static library.  When building for Android, both the GYP and GN
@@ -27,7 +28,7 @@ source_set("system_thunks") {
 
 # GYP version: mojo/mojo_public_gles2_for_loadable_module.gypi
 source_set("gles2_thunks") {
-  visibility = [ "//third_party/mojo/public/gles2:for_shared_library" ]
+  visibility = [ mojo_root + "mojo/public/gles2:for_shared_library" ]
 
   sources = [
     "gles2_thunks.cc",
@@ -44,12 +45,12 @@ source_set("gles2_thunks") {
     "MOJO_GLES2_IMPLEMENTATION",
   ]
 
-  configs += [ "//third_party/mojo/third_party/khronos:khronos_headers" ]
+  configs += [ mojo_root + "mojo/third_party/khronos:khronos_headers" ]
 
   deps = [
-    "//third_party/mojo/public/c/gles2",
-    "//third_party/mojo/public/c/environment",
-    "//third_party/mojo/public/c/system",
+    mojo_root + "mojo/public/c/gles2",
+    mojo_root + "mojo/public/c/environment",
+    mojo_root + "mojo/public/c/system",
   ]
 
   if (is_mac) {
