--- a/public/python/BUILD.gn
+++ b/public/python/BUILD.gn
@@ -1,8 +1,9 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
-import("//third_party/mojo/third_party/cython/rules.gni")
+import(mojo_root + "mojo/third_party/cython/rules.gni")
 
 group("python") {
   deps = [
@@ -25,12 +26,12 @@ python_binary_module("system") {
     "src/python_system_helper.h",
   ]
   deps = [
-    "//third_party/mojo/public/c/environment",
-    "//third_party/mojo/public/c/system:for_shared_library",
-    "//third_party/mojo/public/cpp/environment:standalone",
-    "//third_party/mojo/public/cpp/system",
-    "//third_party/mojo/public/cpp/utility",
-    "//third_party/mojo/public/cpp/bindings:callback",
+    mojo_root + "mojo/public/c/environment",
+    mojo_root + "mojo/public/c/system:for_shared_library",
+    mojo_root + "mojo/public/cpp/environment:standalone",
+    mojo_root + "mojo/public/cpp/system",
+    mojo_root + "mojo/public/cpp/utility",
+    mojo_root + "mojo/public/cpp/bindings:callback",
     ":base",
   ]
 }
