--- a/public/tools/BUILD.gn
+++ b/public/tools/BUILD.gn
@@ -1,8 +1,9 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+import("//build/config/mojo.gni")
 
-import("//third_party/mojo/public/mojo.gni")
+import(mojo_root + "mojo/public/mojo.gni")
 
 if (use_prebuilt_mojo_shell) {
   copy("copy_mojo_shell") {
