--- a/public/tools/bindings/mojom.gni
+++ b/public/tools/bindings/mojom.gni
@@ -123,6 +123,7 @@ template("mojom") {
       "{{source}}",
       "--use_chromium_bundled_pylibs",
       "-d", rebase_path("//", root_build_dir),
+      "-I", rebase_path(mojo_root, root_build_dir),
       "-I", rebase_path("//", root_build_dir),
       "-o", rebase_path(root_gen_dir),
     ]
