--- a/public/c/gles2/BUILD.gn
+++ b/public/c/gles2/BUILD.gn
@@ -8,6 +8,7 @@ config("gles2_config") {
 }
 
 source_set("gles2") {
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "gles2.h",
     "gles2_export.h",
