--- a/public/c/test_support/BUILD.gn
+++ b/public/c/test_support/BUILD.gn
@@ -9,6 +9,7 @@ shared_library("test_support") {
 
   defines = [ "MOJO_TEST_SUPPORT_IMPLEMENTATION" ]
 
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "test_support.h",
     "test_support_export.h",
