--- a/public/cpp/application/BUILD.gn
+++ b/public/cpp/application/BUILD.gn
@@ -5,6 +5,7 @@ import("//build/config/mojo.gni")
 
 # GYP version: mojo/public/mojo_public.gyp:mojo_application_base
 source_set("application") {
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "application_connection.h",
     "application_delegate.h",
@@ -35,6 +36,7 @@ source_set("application") {
 
 # GYP version: mojo/public/mojo_public.gyp:mojo_application_standalone
 source_set("standalone") {
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "lib/application_runner.cc"
   ]
@@ -49,6 +51,7 @@ source_set("standalone") {
 
 source_set("test_support") {
   testonly = true
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "application_test_base.h",
     "lib/application_test_base.cc",
@@ -65,6 +68,7 @@ source_set("test_support") {
 
 source_set("test_support_standalone") {
   testonly = true
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [ "lib/application_test_main.cc", ]
   public_deps = [ ":test_support", ]
   deps = [
