--- a/public/cpp/environment/tests/BUILD.gn
+++ b/public/cpp/environment/tests/BUILD.gn
@@ -5,6 +5,7 @@ import("//build/config/mojo.gni")
 
 # GYP version: mojo/mojo_base.gyp:mojo_public_environment_unittests
 test("mojo_public_environment_unittests") {
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "async_waiter_unittest.cc",
     "logger_unittest.cc",
