--- a/public/cpp/system/BUILD.gn
+++ b/public/cpp/system/BUILD.gn
@@ -4,6 +4,7 @@
 import("//build/config/mojo.gni")
 
 source_set("system") {
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "buffer.h",
     "core.h",
