--- a/public/cpp/system/tests/BUILD.gn
+++ b/public/cpp/system/tests/BUILD.gn
@@ -13,6 +13,7 @@ test("mojo_public_system_unittests") {
     mojo_root + "mojo/testing/gtest",
   ]
 
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "core_unittest.cc",
     "macros_unittest.cc",
