--- a/public/cpp/utility/tests/BUILD.gn
+++ b/public/cpp/utility/tests/BUILD.gn
@@ -13,6 +13,7 @@ test("mojo_public_utility_unittests") {
     mojo_root + "mojo/testing/gtest",
   ]
 
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "mutex_unittest.cc",
     "run_loop_unittest.cc",
