--- a/public/interfaces/bindings/tests/BUILD.gn
+++ b/public/interfaces/bindings/tests/BUILD.gn
@@ -7,6 +7,7 @@ import(mojo_root + "mojo/public/tools/bindings/mojom.gni")
 
 mojom("test_interfaces") {
   testonly = true
+  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
   sources = [
     "math_calculator.mojom",
     "no_module.mojom",
