Fixup from using BUILD.gn

--- a/public/c/gles2/BUILD.gn
+++ b/public/c/gles2/BUILD.gn
@@ -8,15 +8,14 @@ config("gles2_config") {
 }
 
 source_set("gles2") {
-  public_configs = [ rebase_path("mojo", ".", mojo_root) ]
+  public_configs = [ ":gles2_config", rebase_path("mojo", ".", mojo_root) ]
+
   sources = [
     "gles2.h",
     "gles2_export.h",
   ]
 
-  public_configs = [ ":gles2_config" ]
-
-  public_deps = [
+    public_deps = [
     mojo_root + "mojo/public/c/environment",
     mojo_root + "mojo/public/c/system",
   ]
