--- a/public/c/system/BUILD.gn
+++ b/public/c/system/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+
 import("//build/config/mojo.gni")
 
 # Depend on this target to use the types etc defined in the system without
@@ -36,7 +37,7 @@ source_set("system") {
 group("for_shared_library") {
   public_deps = [ ":system" ]
   if (is_component_build) {
-    deps = [ rebase_path("mojo/edk/system", ".", mojo_root) ]
+    deps = [ "//mojo/edk/system" ]
   } else {
     deps = [ rebase_path("mojo/public/platform/native:system_thunks", ".", mojo_root) ]
   }
@@ -45,6 +46,6 @@ group("for_shared_library") {
 group("for_component") {
   public_deps = [ ":system" ]
   if (is_component_build) {
-    deps = [ rebase_path("mojo/edk/system", ".", mojo_root) ]
+    deps = [ "//mojo/edk/system" ]
   }
 }
