--- a/public/c/system/tests/BUILD.gn
+++ b/public/c/system/tests/BUILD.gn
@@ -1,6 +1,7 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+
 import("//build/config/mojo.gni")
 
 source_set("tests") {
@@ -32,7 +33,7 @@ test("perftests") {
 
   deps = [
     "//base",
-    rebase_path("mojo/edk/test:run_all_perftests", ".", mojo_root),
+    "//mojo/edk/test:run_all_perftests",
     rebase_path("mojo/public/c/environment", ".", mojo_root),
     rebase_path("mojo/public/cpp/system", ".", mojo_root),
     rebase_path("mojo/public/cpp/test_support:test_utils", ".", mojo_root),
