--- a/public/cpp/application/tests/BUILD.gn
+++ b/public/cpp/application/tests/BUILD.gn
@@ -1,13 +1,14 @@
 # Copyright 2014 The Chromium Authors. All rights reserved.
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
+
 import("//build/config/mojo.gni")
 
 # GYP version: mojo/mojo_base.gyp:mojo_public_application_unittests
 test("mojo_public_application_unittests") {
   deps = [
     "//base",
-    rebase_path("mojo/edk/test:run_all_unittests", ".", mojo_root),
+    "//mojo/edk/test:run_all_unittests",
     rebase_path("mojo/public/cpp/application:standalone", ".", mojo_root),
     rebase_path("mojo/public/cpp/environment:standalone", ".", mojo_root),
     rebase_path("mojo/public/cpp/utility", ".", mojo_root),
